# not-grocy-server

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  PERFORMANCE.md  README.md  config.toml  flake.nix  grocy.db  pre-commit.sh
.github/workflows/: rust.yml
docs/: original-schema.yaml  schema.md  setup_keycloak.md
docs/kubernetes/: README.md
docs/kubernetes/kubeadm/: README.md  cloud-init.yaml  kubeadm-config.yaml
docs/kubernetes/mysql-operator/: cluster.yaml  secret.yaml
docs/kubernetes/rook/: README.md
migrations/2021-07-09-180108_table-stock-column-opened_date-type-timestamp-to-date/: down.sql  up.sql
migrations/2021-07-15-232521_init/: up.sql
migrations/20210716230021_init/: mod.rs
src/: lib.rs  main.rs  models.rs  schema.rs
src/api/: login.rs  mod.rs  redirect.rs  utils.rs
src/api/objects/: mod.rs  quantity_units.rs
src/api/stock/: mod.rs  overview.rs  products.rs
src/api/system/config/: grocy.rs  mod.rs  sample.json
src/migrations/: mod.rs  utils.rs
src/migrations/m1_init/: mod.rs
src/migrations/m20210716230021_init/: mod.rs
src/migrations/m2_bugfixes/: mod.rs
